# bnn_on_gpu

./: .gitignore  README.md
cifar_profile/: Makefile  cuda_kernel.cu  cuda_kernel.h  cuda_net.h  main  main.cpp  net.cpp  net.hpp  netW.hpp  run.bash  utils.cuh  utils.h
fashion_profile/: CMakeLists.txt  MNISTLoader.h  Makefile  cuda_kernel.cu  cuda_kernel.h  cuda_net.h  main  main.cpp  net.cpp  net.hpp  netW.hpp  utils.h
